<resources>
    <string name="app_name">Yoalcoolify</string>
    <string name="mon_taux_d_alcool">Mon taux d\'alcool</string>
    <string name="sanctions">Les différentes sanctions</string>
    <string name="bus">Trouver un taxi/bus proche de moi</string>
    <string name="appeler">Appeler un proche</string>
    <string name="title_activity_bottom_nav_bar">bottom_nav_bar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nav_sanction">nav_sanction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="moins">Jeunes conducteurs : limite de 0,2 g/l Retrait de 6 points sur le permis de conduire (ce qui équivaut à perdre son permis la 1ère année du permis probatoire) ; Amende forfaitaire de 135€ ; Immobilisation du véhicule ; Suspension de permis jusqu’à 3 ans, selon le taux d’alcoolémie. Autres conducteurs : Aucune sanction</string>
    <string name="midSanction">Une amende forfaitaire de 135€ ; La perte de 6 points sur le permis de conduire ; Une immobilisation du véhicule ; Une éventuelle suspension du permis de conduire pour une période de 3 ans maximum. Si la conduite sous l’emprise de l’alcool est associée à la consommation de stupéfiants, le conducteur encoure une amende de 4 500€ et une peine d’emprisonnement de 2 ans. Le tribunal peut également suspendre, voire annuler le permis de conduire. En revanche, lorsqu’un accident de la route est provoqué par un conducteur en état d’ébriété, la répression est bien plus lourde. Mettre en danger la vie d’autrui coûte très cher : En cas de blessures graves infligées, le responsable est passible de 75 000€ d’amende, d’un retrait de 6 points, d’une suspension de 10 ans du permis de conduire et d’une confiscation du véhicule. Si la mort d’un usager de la route est provoquée, la sanction grimpe alors à 100 000€ et 7 ans d’emprisonnement.</string>
    <string name="sanctionPlus">Un retrait de 6 points sur le permis de conduire ; Une amende pouvant atteindre 4 500€ ; Une suspension ou une annulation du permis de conduire pour 3 ans, sans aménagement permettant au conducteur d’exercer son activité professionnelle ; Une peine de 2 ans de prison ; L’interdiction de conduire un véhicule non équipé d’un dispositif d’éthylotest anti-démarrage (EAD) pour 5 ans maximum.</string>
    <string name="retour">Acceuil</string>
    <string name="hint">Nouveau numéro</string>
    <string name="enter_button">Ajouter</string>
    <string name="delete">Tout supprimer</string>
    <string name="masculin">Masculin</string>
    <string name="Feminin_buttonn">Féminin</string>
    <string name="poids">Poids</string>
</resources>
