<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".taux">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logoyoalcoolify"
        android:layout_centerHorizontal="true"
        android:id="@+id/imgLogo"
        />

    <CheckBox
        android:id="@+id/checkBox_Masculin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:text="@string/masculin" />

    <CheckBox
        android:id="@+id/checkBox_Feminin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:text="@string/Feminin_buttonn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Combien de verre(s) avez vous bu ?"
        android:textSize="20dp"

        android:id="@+id/txt_verres"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_verres"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poids"
        android:id="@+id/str_poids"
        android:layout_alignTop="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/str_poids"
        android:layout_marginTop="50dp"
        android:id="@+id/poids"
        />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="100dp"
    android:text="Calculer mon taux"
    android:textSize="25dp"
    android:id="@+id/btn_calcul"/>

</RelativeLayout>