<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="10"
    android:orientation="vertical">
    
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:background="#FCFFD6">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FCFFD6">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/black_white_gradient">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:src="@drawable/logoyoalcoolify"
                android:layout_gravity="center"
                />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="355dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    >
                    
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:cardCornerRadius="12dp">
                        
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/choix1"
                                android:text="@string/mon_taux_d_alcool"
                                android:textSize="20dp"
                                android:layout_centerInParent="true"/>
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button1"
                                android:background="@android:color/transparent"/>
                            
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical"
                        app:cardCornerRadius="12dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/choix2"
                                android:text="@string/sanctions"
                                android:textSize="20dp"
                                android:textAlignment="center"
                                android:layout_centerInParent="true"/>
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button2"
                                android:background="@android:color/transparent"/>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:cardCornerRadius="12dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/choix3"
                                android:text="@string/bus"
                                android:textSize="20dp"
                                android:textAlignment="center"
                                android:layout_centerInParent="true"/>
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button3"
                                android:background="@android:color/transparent"/>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical"
                        app:cardCornerRadius="12dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/choix4"
                                android:text="@string/appeler"
                                android:textSize="20dp"
                                android:layout_centerInParent="true"/>
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/button4"
                                android:background="@android:color/transparent"/>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>
            
        </RelativeLayout>
        
    </LinearLayout>


</ScrollView>


</RelativeLayout>